--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -27,7 +27,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	#hoverbox:hover {
 		background: url('images/DesignSeries/Hover box.png') no-repeat; 
 	}
-
+	
 	#hoverbox:hover .producticons {
 		display: inline;
 	}
@@ -96,19 +96,10 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	#bowltitle6 {
 		display:none;
 	}
-	.producticons {
-		display:none;
-	}
 	.producticons2 {
 		display:none;
 	}
-	.producticons3 {
-		display:none;
-	}
 	.producticons4 {
-		display:none;
-	}
-	.producticons5 {
 		display:none;
 	}
 	.producticons6 {
@@ -374,8 +365,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product1" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1a"><img src="images/DesignSeries/1.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span>
                         <span id="ds2a"><img src="images/DesignSeries/4a.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1-2</label>
-						<label class="producticons2" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1-2</label>
+						<label class="producticons1" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1</label>
+						<label class="producticons2" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #2</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 30px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
@@ -388,8 +379,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product2" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1b"><img src="images/DesignSeries/2.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span>
                         <span id="ds2b"><img src="images/DesignSeries/5a.png" style="float: left; margin-top: -12px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #3-4</label>
-						<label class="producticons4" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #3-4</label>
+						<label class="producticons3" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #3</label>
+						<label class="producticons4" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #4</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 2px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
@@ -407,8 +398,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product3" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1c"><img src="images/DesignSeries/3.png" style="float: left; margin-top: 5px; margin-left: -13px;" ></span>
                         <span id="ds2c"><img src="images/DesignSeries/6a.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #5-6</label>
-						<label class="producticons6" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #5-6</label>
+						<label class="producticons5" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #5</label>
+						<label class="producticons6" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #6</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 56px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 56px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 56px;" >
@@ -655,6 +646,12 @@ $(document).ready(function(){
 		$("#notify5").fadeOut(10);
 		$("#bowltitle6").fadeIn(10);
 		$("#bowltitle5").fadeOut(10);
+		$(".producticons2").fadeIn(10);
+		$(".producticons4").fadeIn(10);
+		$(".producticons6").fadeIn(10);
+		$(".producticons1").fadeOut(10);
+		$(".producticons3").fadeOut(10);
+		$(".producticons5").fadeOut(10);
 	});
 });
 $(document).ready(function(){
@@ -679,6 +676,12 @@ $(document).ready(function(){
 		$("#notify6").fadeOut(10);
 		$("#bowltitle5").fadeIn(10);
 		$("#bowltitle6").fadeOut(10);
+		$(".producticons1").fadeIn(10);
+		$(".producticons3").fadeIn(10);
+		$(".producticons5").fadeIn(10);
+		$(".producticons2").fadeOut(10);
+		$(".producticons4").fadeOut(10);
+		$(".producticons6").fadeOut(10);
 	});
 });
 
