--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -204,7 +204,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			  
 
 				<p class="number" style="margin-bottom: -8px; margin-top: 0px;" >
-					<label for="number" style="color: white; font-family: 'Calibri'; font-size: 18px; padding-left: 56px" >mobile</label>
+					<label for="number" style="color: white; font-family: 'Calibri'; font-size: 18px; padding-left: 53px" >number</label>
 					<input type="text" name="number" id="number" class="validate[custom[telephone]]" value="" style="background-color: transparent; border-top: none; border-left: none; border-right: none; border-bottom: none; color: white;" />
 				</p>
 			  
