--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -230,8 +230,11 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	
 	<div>&nbsp;</div>
 	<div>&nbsp;</div><div>&nbsp;</div>
-	<div><a href="package_ecovative.html"><span id="swipe1" style="margin-left:800px";><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px; margin-bottom: 35px;"  ></span></a>
-					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px; margin-bottom: 35px;"  ></div>
+<!--	<div><a href="package_ecovative.html"><span id="swipe1" style="margin-left:800px";><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px; margin-bottom: 35px;"  ></span></a>
+					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px; margin-bottom: 35px;"  ></div>-->
+	
+		<div><p align="center"><a href="package_ecovative.html"><span id="swipe1" ><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px; margin-bottom: 35px;"  ></span></a>
+					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px; margin-bottom: 35px;"  ></p></div>
 	
 	<div>&nbsp;</div>
 	<div>&nbsp;</div>
